--- a/src/main/webapp/css/styles.css
+++ b/src/main/webapp/css/styles.css
@@ -78,7 +78,7 @@ body, .ionic-body {
     -ms-background-size: cover;
     -o-background-size: cover;
     background-size: cover;
-    z-index: -1;
+    z-index: 0;
 }
 .bg-image.blur {
     filter: url(/Lister/images/blur.svg#blur);
@@ -94,7 +94,7 @@ body, .ionic-body {
     /*margin: 0;*/
     width: 100vw;
     height: 100vh;
-    z-index: 0;
+    z-index: 1;
 }
 .content > section, .content > ion-nav-view {
     /*position: fixed;*/
@@ -163,6 +163,7 @@ footer {
     font-family: 'Montserrat', sans-serif;
     /*font-size: 1.2rem;*/
     font-size: 0.9rem;
+    z-index: 10;
 }
 /* Ionic standard css changes */
 .pane, .view, [nav-view-transition="ios"][nav-view-direction="forward"], [nav-view-transition="ios"][nav-view-direction="back"] {
